# docs/swagger.json
@@ -700,7 +700,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Admin"
+                            "$ref": "#/definitions/models.AdminLogin"
                         }
                     }
                 ],
@@ -1102,6 +1102,57 @@
                     },
                     "500": {
                         "description": "error\": \"Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/salesreport/excel": {
+            "post": {
+                "description": "Generate a stylish Excel sales report based on the provided start and end dates.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Generate Excel Sales Report",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Start date (format: dd-mm-yyyy)",
+                        "name": "StartDate",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "End date (format: dd-mm-yyyy)",
+                        "name": "EndDate",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Excel sales report",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    "400": {
+                        "description": "error\":\"Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "error\":\"Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -2583,57 +2634,6 @@
                 }
             }
         },
-        "/sales/report": {
-            "post": {
-                "description": "Generate a stylish Excel sales report based on the provided start and end dates.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Admin"
-                ],
-                "summary": "Generate Excel Sales Report",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Start date (format: dd-mm-yyyy)",
-                        "name": "StartDate",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "End date (format: dd-mm-yyyy)",
-                        "name": "EndDate",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Excel sales report",
-                        "schema": {
-                            "type": "file"
-                        }
-                    },
-                    "400": {
-                        "description": "error\":\"Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "error\":\"Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/signup": {
             "post": {
                 "description": "user can signup by giving their details",
@@ -2935,7 +2935,7 @@
                 }
             }
         },
-        "models.Admin": {
+        "models.AdminLogin": {
             "type": "object",
             "required": [
                 "email",
@@ -2945,22 +2945,10 @@
                 "email": {
                     "type": "string"
                 },
-                "firstname": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "lastname": {
-                    "type": "string"
-                },
                 "password": {
                     "type": "string",
                     "maxLength": 20,
                     "minLength": 6
-                },
-                "token": {
-                    "type": "string"
                 }
             }
         },
